--- a/staticapp/index.html
+++ b/staticapp/index.html
@@ -1,46 +1,82 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/bootstrap-dark.css">
     <link rel="stylesheet" href="css/app.css">
 </head>
 
 <body>
-    <!--header line -->
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="">Title</a>
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Option</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Settings</a>
-            </li>
-        </ul>
-    </nav>
+       <div class="container-fluid">
+       <div id="navigation"></div>
 
-    <div class="container-fluid">
-        <form>
-            <div class="form-group">
-                <label>Datum rojstva</label>
-                <input type="text" class="form-control">
-            </div>
-            <div class="form-group">
-                <label>Ime</label>
-                <input type="text" class="form-control">
-            </div>
-            <div class="form-group">
-                <label>Priimek</label>
-                <input type="text" class="form-control">
-            </div>
-        </form>
+        <h1>Home h1</h1>
+        <h2>Home h2</h2>
+        <h3>Home h3</h3>
+        <h4>Home h4</h4>
+        <h5>Home h5</h5>
+        <h6>Home h6</h6>
+        <h7>Home h7</h7>
+        <h1 class="display-1">Display 1</h1>
+        <h2 class="display-2">Display 2</h2>
+        <h3 class="display-3">Display 3</h3>
+        <h4 class="display-4">Display 4</h4>
+        <h1>Heading 1 <small>smaller text</small></h1>
+        <h2>Heading 2 <small>smaller text</small></h2>
+        <h3>Heading 3 <small>smaller text</small></h3>
+        <h4>Heading 4 <small>smaller text</small></h4>
+        <h5>Heading 5 <small>smaller text</small></h5>
+        <h6>Heading 6 <small>smaller text</small></h6>
+
+        <p>Some of this <mark>text</mark> is <mark>marked</mark>.</p>
+
+        <dl>
+                <dt>Dog</dt>
+                <dd>- animal that barks</dd>
+                <dt>Cat</dt>
+                <dd>- animal that meows</dd>
+                <dt>Mouse</dt>
+                <dd>- animal that squeaks</dd>
+                </dl>
+
+
+
+                <button class="btn btn-success" type="button">Basic button</button>
+                <input class="btn btn-success" value="Submit Button" type="submit">
+                <input class="btn btn-success" value="Input Button" type="button">
+                <a href="#" class="btn btn-success" role="button">Button Link</a>
+
+
+                <button class="btn btn-success" type="button">Button</button>
+                <button class="btn btn-info" type="button">Button</button>
+                <button class="btn btn-warning" type="button">Button</button>
+                <button class="btn btn-danger" type="button">Button</button>
+                <button class="btn btn-primary" type="button">Button</button>
+                <button class="btn btn-secondary" type="button">Button</button>
+                <button class="btn btn-light" type="button">Button</button>
+                <button class="btn btn-dark" type="button">Button</button>
+
+
+                <div class="card">
+                        <div class="card-header bg-warning">Some header text</div>
+                        <div class="card-body bg-success">Some body text</div>
+                        <div class="card-footer bg-danger">Some footer text</div>
+                        </div>
+
+
+
+
+
 
     </div>
-
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
+        integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
+        crossorigin="anonymous"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/app.js"></script>
 </body>
