--- a/staticapp/navigation.html
+++ b/staticapp/navigation.html
@@ -27,7 +27,10 @@
                 <li class="nav-item">
                     <a href="help.html" class="nav-link" >Help</a>
                 </li>
-            </ul>
+                <li class="nav-item">
+                        <a href="help.html" class="nav-link" >Help</a>
+                    </li>
+                </ul>
         </div>
     </nav>
 </body>
